Bug 917598 - ISimpleDOMNode::innerHTML does not work on math elements, r=tbsaunde